# gpttrm

./: README.md  pyproject.toml
src/gpttrm/: dataloader.py  gpt2_lm.py  gpt2_tokenizer.py  training.py  utils.py
src/gpttrm/gpt/: custom_gpt2.py  gpt2_lm.py  interact.py  models.py  train_experiments.py  trm_block.py
src/gpttrm/trm/: layers.py  losses.py  trm.py  trm_hier6.py  trm_singlez.py
tests/: test_imports.py
