[project]
name = "gpttrm"
version = "0.1.0"
description = "Minimalist GPT2 Generator with Tiny Recursive Models included"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "torch",
    "lightning",
    "transformers",
    "pandas",
    "numpy",
    "tensorboard",
    "pytest",
    "typer>=0.24.1",
    "setuptools<70",
    "importlib-metadata",
]

[project.scripts]
gpttrm-cli = "gpttrm.gpt.train_experiments:app"

[tool.uv]
package = true
